--- a/Test/htdocs/bootstrap.html
+++ b/Test/htdocs/bootstrap.html
@@ -5,8 +5,8 @@
 <title>PMS - Perl Messaging System</title>
 
 
-<link href="bootstrap.css" rel="stylesheet">
-<link href="bootstrap-responsive.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 </head>
 <body>
 	<br><div class="header" align="center" color="white"><h2> PMS - Perl Messaging System</h2><br>
